--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             </a>
         </section>
 
+        <div> 
+          
+        </div>
+
         <section class="about container" id="about">
           <div class="about-img">
              <img src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
