--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
           <div class="top">
 
             <video autoplay loop muted plays-inline class="back-video">
-              <source src="./imgs/home .mp4" type="video/mp4">
+              <source src="./imgs/home.mp4" type="video/mp4">
             </video>
-            
+ 
             <div class="content">
               <h1>Find your perfect place to LIVE.</h1>
+              <form action="search.php" method="GET" class="search-button">
+                <input type="text" name="query" placeholder="Search...">
+                <button type="submit">Search</button>
+            </form>
             </div>
           </div>
       </section>
