added map.html and srcipt.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
        <link rel="stylesheet" href="styles.css">
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
        <link rel="icon" href="./imgs/favicon.ico">
+       <script src="script.js"></script>
     </head>
     <body>
       <header>
@@ -30,7 +31,7 @@
  
             <div class="content">
               <h1>Find your perfect place to LIVE.</h1>
-              <form action="search.php" method="GET" class="search-button">
+              <form action="map.html" method="GET" class="search-button">
                 <input type="text" name="query" placeholder="Search...">
                 <button type="submit">Search</button>
             </form>
@@ -84,6 +85,7 @@
               experience thereby making it as enjoyable and seamless as possible.</p>
               <a href="#" class="btn">Learn More</a>
           </div>
+          ``
         </section>
 
     <section class='footer'>
