--- a/map.html
+++ b/map.html
@@ -15,66 +15,56 @@ body { margin: 0; padding: 0; }
 <div id="map"></div>
 <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoic3VtLW1pc2hyYSIsImEiOiJjbHVtdzI1YTQxZWpkMmpuemVrc3R6aGt1In0.0J-pUXtcBRrg3hbOG1UDSQ';
-    const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v9',
-        projection: 'globe', // Display the map as a globe, since satellite-v9 defaults to Mercator
-        zoom: 1,
-        center: [30, 15]
+    var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: [0, 0], // Default center coordinates
+      zoom: 9 // Default zoom level
     });
 
-    map.addControl(new mapboxgl.NavigationControl());
-    map.scrollZoom.disable();
-
-    map.on('style.load', () => {
-        map.setFog({}); // Set the default atmosphere style
-    });
-
-    // The following values can be changed to control rotation speed:
-
-    // At low zooms, complete a revolution every two minutes.
-    const secondsPerRevolution = 240;
-    // Above zoom level 5, do not rotate.
-    const maxSpinZoom = 5;
-    // Rotate at intermediate speeds between zoom levels 3 and 5.
-    const slowSpinZoom = 3;
-
-    let userInteracting = false;
-    const spinEnabled = true;
-
-    function spinGlobe() {
-        const zoom = map.getZoom();
-        if (spinEnabled &&!userInteracting && zoom < maxSpinZoom) {
-            let distancePerSecond = 360 / secondsPerRevolution;
-            if (zoom > slowSpinZoom) {
-                // Slow spinning at higher zooms
-                const zoomDif =
-                    (maxSpinZoom - zoom) / (maxSpinZoom - slowSpinZoom);
-                distancePerSecond *= zoomDif;
-            }
-            const center = map.getCenter();
-            center.lng -= distancePerSecond;
-            // Smoothly animate the map over one second.
-            // When this animation is complete, it calls a 'moveend' event.
-            map.easeTo({ center, duration: 1000, easing: (n) => n });
+    // Function to extract query parameter from URL
+    function getQueryVariable(variable) {
+      const query = window.location.search.substring(1);
+      const vars = query.split('&');
+      for (let i = 0; i < vars.length; i++) {
+        const pair = vars[i].split('=');
+        if (decodeURIComponent(pair[0]) === variable) {
+          return decodeURIComponent(pair[1]);
         }
+      }
+      return null;
     }
 
-    // Pause spinning on interaction
-    map.on('mousedown', () => {
-        userInteracting = true;
-    });
-    map.on('dragstart', () => {
-        userInteracting = true;
-    });
-
-    // When animation is complete, start spinning if there is no ongoing interaction
-    map.on('moveend', () => {
-        spinGlobe();
+    document.addEventListener('DOMContentLoaded', function () {
+      const query = getQueryVariable('query');
+      if (query) {
+        geocode(query);
+      }
     });
 
-    spinGlobe();
-</script>
-
+    function geocode(query) {
+      // Send request to Mapbox Geocoding API
+      fetch('https://api.mapbox.com/geocoding/v5/mapbox.places/' + encodeURIComponent(query) + '.json?access_token=' + mapboxgl.accessToken)
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (data) {
+          // Extract coordinates from response
+          var coordinates = data.features[0].geometry.coordinates;
+          // Center map at the coordinates
+          map.flyTo({
+            center: coordinates,
+            zoom: 12 // Adjust zoom level as needed
+          });
+          // Optionally, add a marker at the coordinates
+          new mapboxgl.Marker()
+            .setLngLat(coordinates)
+            .addTo(map);
+        })
+        .catch(function (error) {
+          console.log('Error:', error);
+        });
+    }
+  </script>
 </body>
 </html>
