modified map and html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <link rel="stylesheet" href="styles.css">
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
        <link rel="icon" href="./imgs/favicon.ico">
-       <script src="script.js"></script>
+       <script src="scryuhiipt.js"></script>
     </head>
     <body>
       <header>
