--- a/map.html
+++ b/map.html
@@ -53,8 +53,8 @@ body { margin: 0; padding: 0; }
       1: { coordinates: [77.529921418441, 12.989932041549842], price: 15000 },
       2: { coordinates: [77.64202482580896,12.919145905307818], price: 20000 },
       3: { coordinates: [77.60712171660433,12.92670570007741], price: 180000 },
-      4: { coordinates: [77.71054,12.96450], price: 180000,},
-      5: { coordinates: [77.60001,13.05141], price: 180000,}
+      4: { coordinates: [77.71054,12.96450], price: 180000},
+      5: { coordinates: [77.60001,13.05141], price: 180000},
       6: { coordinates: [77.52117230288049,12.827069645964146], price: 190000},
       7: { coordinates: [77.59953884904377,13.044428595773583], price: 280000},
       8: { coordinates: [77.39165737580471,13.116897784083983], price: 380000},
