--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
             <div class="content">
               <h1>Find your perfect place to LIVE.</h1>
               <form action="map.html" method="GET" class="search-button">
+                <select name="type" id="PropertyType">
+                  <option value="apartment">Apartment</option>
+                  <option value="pg">PG</option>
+                  <option value="rowhouse">Rowhouse</option>
+              </select>
                 <input type="text" id="SearchInput" name="query" placeholder="Search...">
+                
                 <button type="submit">Search</button>
             </form>
+            
             </div>
           </div>
       </section>
