--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <option value="all">All</option>
                     <option value="apartment">Apartment</option>
                     <option value="pg">PG</option>
-                    <option value="rowhouse">Rowhouse</option>
+                    <option value="row house">Row house</option>
                   </select>
                 <input type="text" id="SearchInput" name="query" placeholder="Search...">
                 <button type="submit">Search</button>
@@ -72,7 +72,7 @@
               <div class="card__background" style="background-image: url(https://i.pinimg.com/564x/c0/88/89/c0888972ecf2874adea2be5263623973.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Looking for a</p>
-                <h3 class="card__heading">Rowhouse</h3>
+                <h3 class="card__heading">Row house</h3>
               </div>
             </a>
         </section>
@@ -88,7 +88,7 @@
           <div class="about-text">
                
               <h2>We provide the best Rental<br> Property for You</h2>
-              <p>Welcome to Rent Ease, your premiere destination for hassle-free convinient rentals.
+              <p>Welcome to Rent Ease, your premiere destination for hassle-free convenient rentals.
               We are passionate about connecting people with perfect rental solutions for their needs.
               At RentEase, we understand that finding the right rental house can be a time-consuming and
               sometimes a stressful process. That's why we dedicate ourselves to simplify the rental
@@ -107,7 +107,7 @@
           <h3>Quick Links</h3>
           <a href="apartment.html">Apartments</a>
           <a href="villa.html">Villas</a>
-          <a href="rowhouse.html">Rowhouses</a>
+          <a href="rowhouse.html">Row houses</a>
         </div> 
         <div class="footer-box">
           <h3>
