--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
        <script src="scryuhiipt.js"></script>
     </head>
     <body>
+      
       <header>
         <div class="nav-container">
           <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a' ></i>Rent Ease </a>
           <ul class="navbar">
-            
-            <li><a href="login.html" class="btn">Log In</a></li>
-            <li><a href="signup.html" class="btn">Sign up</a></li>
-            <li><a href="" class="btn">Add Property</a></li>
-        </ul> 
+            <li><a href='login.html' class='btn'>Log In</a></li>";
+            <li><a href='signup.html' class='btn'>Sign up</a></li>";
+            <li><a href='add_property.html' class='btn'>Add Property</a></li>";
+          </ul> 
         </div>
       </header>
 
