--- a/login.html
+++ b/login.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login Page</title>
-</head>
-<body>
-
-<form id="loginForm">
-  <label for="username">Username:</label><br>
-  <input type="text" id="username" name="username"><br>
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password"><br><br>
-  <button type="submit">Login</button>
-</form>
+    <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Rent Ease</title>
+       <link rel="stylesheet" href="styles.css">
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+       <link rel="icon" href="./imgs/favicon.ico">
+       <header>
+        <body>
+        <div class="nav container">
+            <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a'></i>Rent Ease</a>
 
 
-<script>
-document.getElementById("loginForm").addEventListener("submit", function(event) {
-  event.preventDefault(); // Prevent the default form submission
-  
-  // Get the username and password entered by the user
-  var username = document.getElementById("username").value;
-  var password = document.getElementById("password").value;
-  
-  // Here, you should perform the login validation
-  // For simplicity, let's assume it's successful
-  var isLoggedIn = true;
-  
-  if (isLoggedIn) {
-    // Redirect to the index page after login
-    window.location.href = "index.html";
-    
-    // Hide the login button
-    document.getElementById("Log In").style.display = "none";
-  } else {
-    // Display an error message or handle login failure
-    alert("Login failed. Please check your credentials.");
-  }
-});
+    <!--Login page-->
+    <a href="signup.html" class="btn">Sign up</a> 
 
-// Add event listener to login button
-document.getElementById("log In").addEventListener("click", function() {
-  // Simulate clicking on the submit button of the login form
-  document.getElementById("loginForm").submit();
-});
+</div>
+     </header> 
 
-</script> 
 
-  
+    <!--log in-->
+    <div class="login container">
+        <div class="login-container">
+        <h2>Login to continue</h2>
+        <!--login form-->
+        
+        <form method="post" action="login.php">
+                <span>Enter Registerd Email Id</span>
+                <input type="email" name="id" placeholder="Email" required>
+                <span>Enter Registerd Password</span>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="submit" value="Log In" class="button">
+            </form>
+        </form>
+        <a href="signup.html" class="btn">Sign Up Now </a>
+        <a href="#">Forgot Password?</a>
+    </div>
 
-</body>
+
+    <!--Login Image-->
+    <div class="login-Image">
+        <img src="./imgs/loginimg.png"alt="">
+    <div> 
+</div>
+
+    </body>
 </html>
