changes in  login.html added connect.php, login.php  and dashborard.html changes in signup.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
        <script src="scryuhiipt.js"></script>
     </head>
     <body>
-      
+      <!--logout button-->
       <header>
         <div class="nav-container">
           <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a' ></i>Rent Ease </a>
