--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
         <div class="nav container">
             <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a'></i>Rent Ease</a>
 
-
-    <!--Login page-->
+ 
+    <!--added login page-->
     <a href="signup.html" class="btn">Sign up</a> 
 
 </div>
