--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <ul class="navbar">
             <li><a href='login.html' class='btn'>Log In</a></li>";
             <li><a href='signup.html' class='btn'>Sign up</a></li>";
-            <li><a href='add_property.html' class='btn'>Add Property</a></li>";
+            
           </ul> 
         </div>
       </header>
@@ -61,11 +61,11 @@
                 <h3 class="card__heading">Apartment</h3>
               </div>
             </a>
-            <a class="card" href="villa.html">
+            <a class="card" href="PG.html">
                 <div class="card__background" style="background-image: url(https://images.pexels.com/photos/2480608/pexels-photo-2480608.jpeg?auto=compress&cs=tinysrgb&w=600)"></div>
                 <div class="card__content">
                   <p class="card__category">Looking for a</p>
-                  <h3 class="card__heading">Villa</h3>
+                  <h3 class="card__heading">Pg</h3>
                 </div>
             </a>
             <a class="card" href="rowhouse.html">
