--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
         <!--login form-->
         
         <form method="post" action="login.php">
-                <span>Enter Registerd Email Id</span>
-                <input type="email" name="id" placeholder="Email" required>
+                <span>Enter Registerd Username</span>
+                <input type="text" name="username" placeholder="Username" required>
                 <span>Enter Registerd Password</span>
                 <input type="password" name="password" placeholder="Password" required>
                 <input type="submit" value="Log In" class="button">
