changes in dashboard.php and style.css and map.html

--- a/map.html
+++ b/map.html
@@ -38,14 +38,15 @@
       });
 
       var mumbai = {
-        2: { coordinates: [72.933547, 19.131552], price: 100000 },
+        1: { coordinates: [73.0809274, 19.2221822], price: 100000 },
+        2: { coordinates: [72.8643107476798, 19.21124415], price: 100000 },
         3: { coordinates: [72.8373616, 19.0648226], price: 9500000 },
         4: { coordinates: [72.833968, 19.1172495], price: 27500000 },
-        5: { coordinates: [72.8412155, 19.1840129], price: 27500000 },
+        5: { coordinates: [72.9995096, 19.1193307], price: 27500000 },
         6: { coordinates: [72.8411995, 19.1633281], price: 25000000 },
         7: { coordinates: [72.8618085, 19.1152873], price: 5500000 },
-        8: { coordinates: [72.8485884, 19.1867193], price: 1000000 },
-        9: { coordinates: [72.8485884, 19.1867193], price: 25000000 },
+        8: { coordinates: [73.091129, 19.1867193], price: 1000000 },
+        9: { coordinates: [72.8485884, 19.2111814], price: 25000000 },
         10: { coordinates: [72.8422235, 19.2084002], price: 14000000 },
         11: { coordinates: [72.8373817, 19.136394], price: 1800000 },
         12: { coordinates: [72.98392629891234, 19.2570093], price: 25600000 },
@@ -57,7 +58,6 @@
         18: { coordinates: [72.854202, 19.1158835], price: 2650000 },
         19: { coordinates: [72.8619328, 19.2267228], price: 2750000 },
         20: { coordinates: [72.8412155, 19.1840129], price: 780000 },
-        20: { coordinates: [73.01425130283573, 19.03160615], price: 780000 },
         21: { coordinates: [72.8669543, 19.1396508], price: 12000000 },
         22: { coordinates: [73.0992311, 19.0392786], price: 4900000 },
         23: { coordinates: [72.8798081, 19.1008628], price: 10800000 },
@@ -89,50 +89,46 @@
         49: { coordinates: [73.0216566, 19.0316759], price: 21000000 },
         50: { coordinates: [72.98392629891234, 19.2570093], price: 14500000 },
         51: { coordinates: [73.0010786, 19.0692829], price: 21600000 },
-        52: { coordinates: [72.8412155, 19.1840129], price: 11000000 },
-        53: { coordinates: [73.0591845321935, 19.025773], price: 17500000 },
-        54: { coordinates: [72.9666732, 19.2000627], price: 16000000 },
-        55: { coordinates: [72.854202, 19.1158835], price: 5500000 },
-        56: { coordinates: [73.0591845321935, 19.025773], price: 12700000 },
-        57: { coordinates: [73.0201311109118, 18.97686135], price: 6000000 },
-        58: { coordinates: [73.0241017, 19.0214035], price: 17000000 },
-        59: { coordinates: [72.97207160890451, 19.17860295], price: 10500000 },
-        60: { coordinates: [73.1146581, 18.9949462], price: 4500000 },
-        61: { coordinates: [73.0663401, 19.0433404], price: 10800000 },
-        62: { coordinates: [72.9947614369014, 19.1163253], price: 11500000 },
-        63: { coordinates: [72.8505837, 19.2565945], price: 19400000 },
-        64: { coordinates: [72.8480292, 19.2474742], price: 9000000 },
-        65: { coordinates: [72.8479905, 19.2294561], price: 30000000 },
-        66: { coordinates: [72.86096607345942, 19.1827254], price: 21200000 },
-        67: { coordinates: [72.86096607345942, 19.1827254], price: 31600000 },
-        68: { coordinates: [73.0190066, 19.0629237], price: 6900000 },
-        69: { coordinates: [72.98392629891234, 19.2570093], price: 12400000 },
-        70: { coordinates: [72.8412155, 19.1840129], price: 21000000 },
-        71: { coordinates: [72.8759248, 19.2097189], price: 12500000 },
-        72: { coordinates: [72.8730296, 19.198814], price: 6800000 },
-        73: { coordinates: [72.8640593, 19.2486925], price: 9200000 },
-        74: { coordinates: [72.97185295714968, 19.2274375], price: 34000000 },
-        75: { coordinates: [73.0591845321935, 19.025773], price: 8800000 },
-        76: { coordinates: [72.99854110561807, 19.10083655], price: 6800000 },
-        77: { coordinates: [72.99854110561807, 19.10083655], price: 12000000 },
-        78: { coordinates: [72.8671624, 19.1068579], price: 8300000 },
-        79: { coordinates: [72.8479905, 19.2294561], price: 22800000 },
-        80: { coordinates: [72.8479905, 19.2294561], price: 44200000 },
-        81: { coordinates: [72.98392629891234, 19.2570093], price: 15500000 },
-        82: { coordinates: [73.01425130283573, 19.03160615], price: 13000000 },
-        83: { coordinates: [72.9995096, 19.1193307], price: 7700000 },
-        84: { coordinates: [73.0201311109118, 18.97686135], price: 16800000 },
-        85: { coordinates: [73.0201311109118, 18.97686135], price: 13200000 },
-        86: { coordinates: [72.9844924192587, 19.22169075], price: 25000000 },
-        87: { coordinates: [72.833968, 19.1172495], price: 29000000 },
-        88: { coordinates: [73.0201311109118, 18.97686135], price: 10000000 },
-        89: { coordinates: [72.999981, 19.1058398], price: 15000000 },
-        90: { coordinates: [72.999981, 19.1058398], price: 18500000 },
-        91: { coordinates: [73.0063977, 19.0842222], price: 42500000 },
-        92: { coordinates: [72.8422235, 19.2084002], price: 20500000 },
-        93: { coordinates: [72.8422235, 19.2084002], price: 25600000 },
-        94: { coordinates: [72.8411995, 19.1633281], price: 19500000 },
-        95: { coordinates: [72.8480292, 19.2474742], price: 14000000 }
+        52: { coordinates: [73.0591845321935, 19.025773], price: 17500000 },
+        53: { coordinates: [72.9666732, 19.2000627], price: 16000000 },
+        54: { coordinates: [72.854202, 19.1158835], price: 5500000 },
+        55: { coordinates: [73.0591845321935, 19.025773], price: 12700000 },
+        56: { coordinates: [73.0201311109118, 18.97686135], price: 6000000 },
+        57: { coordinates: [73.0241017, 19.0214035], price: 17000000 },
+        58: { coordinates: [72.97207160890451, 19.17860295], price: 10500000 },
+        59: { coordinates: [73.1146581, 18.9949462], price: 4500000 },
+        60: { coordinates: [73.0663401, 19.0433404], price: 10800000 },
+        61: { coordinates: [72.9947614369014, 19.1163253], price: 11500000 },
+        62: { coordinates: [72.8505837, 19.2565945], price: 19400000 },
+        63: { coordinates: [72.8480292, 19.2474742], price: 9000000 },
+        64: { coordinates: [72.8479905, 19.2294561], price: 30000000 },
+        65: { coordinates: [72.86096607345942, 19.1827254], price: 21200000 },
+        66: { coordinates: [72.86096607345942, 19.1827254], price: 31600000 },
+        67: { coordinates: [73.0190066, 19.0629237], price: 6900000 },
+        68: { coordinates: [72.98392629891234, 19.2570093], price: 12400000 },
+        69: { coordinates: [72.8412155, 19.1840129], price: 21000000 },
+        70: { coordinates: [72.8759248, 19.2097189], price: 12500000 },
+        71: { coordinates: [72.8730296, 19.198814], price: 6800000 },
+        72: { coordinates: [72.8640593, 19.2486925], price: 9200000 },
+        73: { coordinates: [72.97185295714968, 19.2274375], price: 34000000 },
+        74: { coordinates: [73.0591845321935, 19.025773], price: 8800000 },
+        75: { coordinates: [72.99854110561807, 19.10083655], price: 6800000 },
+        76: { coordinates: [72.99854110561807, 19.10083655], price: 12000000 },
+        77: { coordinates: [72.8671624, 19.1068579], price: 8300000 },
+        78: { coordinates: [72.8479905, 19.2294561], price: 22800000 },
+        79: { coordinates: [72.8479905, 19.2294561], price: 44200000 },
+        80: { coordinates: [72.98392629891234, 19.2570093], price: 15500000 },
+        81: { coordinates: [73.01425130283573, 19.03160615], price: 13000000 },
+        82: { coordinates: [72.9995096, 19.1193307], price: 7700000 },
+        83: { coordinates: [73.0201311109118, 18.97686135], price: 16800000 },
+        84: { coordinates: [73.0201311109118, 18.97686135], price: 13200000 },
+        85: { coordinates: [72.9844924192587, 19.22169075], price: 25000000 },
+        86: { coordinates: [73.02013111, 18.97686135], price: 29000000 },
+        87: { coordinates: [73.0201311109118, 18.97686135], price: 10000000 },
+        88: { coordinates: [72.999981, 19.1058398], price: 15000000 },
+        89: { coordinates: [72.999981, 19.1058398], price: 18500000 },
+        90: { coordinates: [73.0063977, 19.0842222], price: 42500000 },
+        91: { coordinates: [72.8411995, 19.1633281], price: 19500000 }
       };
 
         
@@ -250,7 +246,9 @@
             "<h3>Price:</h3><p>" + coord.price + "</p>"
           );
 
-          marker.setPopup(popup);
+          marker.setPopup(popup);var mumbai = {
+             
+          };
         });
       }
 
