rename dashboard.html, modified index.html, added property.html, modified stlyles.css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="nav-container">
           <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a' ></i>Rent Ease </a>
           <ul class="navbar">
-            <li><a href='login.html' class='btn'>Log In</a></li>";
-            <li><a href='signup.html' class='btn'>Sign up</a></li>";
+            <li><a href='login.html' class='btn'>Log In</a></li>
+            <li><a href='signup.html' class='btn'>Sign up</a></li>
             
           </ul> 
         </div>
@@ -54,21 +54,21 @@
 
         <section class="property" id="property">
           <div class="card-grid">
-            <a class="card" href="apartment.html">
+            <a class="card" href="property.html">
               <div class="card__background" style="background-image: url(https://images.pexels.com/photos/2343468/pexels-photo-2343468.jpeg)"></div>
               <div class="card__content">
                 <p class="card__category">Looking for a</p>
                 <h3 class="card__heading">Apartment</h3>
               </div>
             </a>
-            <a class="card" href="PG.html">
+            <a class="card" href="property.html">
                 <div class="card__background" style="background-image: url(https://images.pexels.com/photos/2480608/pexels-photo-2480608.jpeg?auto=compress&cs=tinysrgb&w=600)"></div>
                 <div class="card__content">
                   <p class="card__category">Looking for a</p>
                   <h3 class="card__heading">Pg</h3>
                 </div>
             </a>
-            <a class="card" href="rowhouse.html">
+            <a class="card" href="property.html">
               <div class="card__background" style="background-image: url(https://i.pinimg.com/564x/c0/88/89/c0888972ecf2874adea2be5263623973.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Looking for a</p>
