--- a/property.html
+++ b/property.html
@@ -55,11 +55,12 @@
                                 </div>
                         
                                 <div class="filter-section">
-                                    <label>Posted By:</label>
+                                    <label>Amenities:</label>
                                     <div class="button-group">
-                                        <button onclick="filterPostedBy('owner')">Owner</button>
-                                        <button onclick="filterPostedBy('builder')">Builder</button>
-                                        <button onclick="filterPostedBy('broker')">Broker</button>
+                                        <button onclick="filterPostedBy('Parking')">Parking</button>
+                                        <button onclick="filterPostedBy('Swimming Pool')">Swimming Pool</button>
+                                        <button onclick="filterPostedBy('Club house')">Club house</button>
+                                        <button onclick="filterPostedBy('GYM')">GYM</button>
                                     </div>
                                 </div>
                             </div>
