--- a/public/property.html
+++ b/public/property.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Properties</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Rent Ease</title>
+       <link rel="stylesheet" href="styles.css">
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+       <link rel="icon" href="./imgs/favicon.ico">
+       <script src="scryuhiipt.js"></script>
+    </head>
 <body>
     <div class="nav-container">
         <a href="index.html" class="logo"><i class='bx bxs-home' style='color:#192f6a'></i>Rent Ease</a>
@@ -41,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="propertyFilter.js"></script>
         <div class="listings" id="listings"></div>
     </div>
     <script>
