modified dashboard.html, index.html, map.html

--- a/public/map.html
+++ b/public/map.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Guides</title>
+    <title>Searching For Your Location </title>
     <meta
       name="viewport"
       content="initial-scale=1, minimum-scale=1, maximum-scale=10, user-scalable=0"
