--- a/public/property.html
+++ b/public/property.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <script src="propertyFilter.js"></script>
+        <script src="script.js"></script>
         <div class="listings" id="listings"></div>
     </div>
     <script>
